# cli-todo-kor

./: .gitignore  .todos_undo.json  README.md  pyproject.toml  todo.py  undo.py  utils.py
data/: command_history.json  todos.json
projects/cli-todo-kor/: todos.json
projects/new-python-project/: display.py  todo.py  todos.json
src/: .todos_undo.json  core.py  todo.py  todos.json
src/cli_todo_kor/: core.py  display.py  todo.py  undo.py  utils.py
src/cli_todo_kor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
