[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-todo-kor"
version = "0.1.4"
description = "한글 CLI Todo List 프로그램"
authors = [
    { name="Your Name", email="your@email.com" }
]
readme = "README.md"
requires-python = ">=3.7"

[project.scripts]
todo = "todo:main" 