[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-todo-kor"
version = "0.1.6"
description = "한글 CLI Todo List 프로그램"
authors = [
    { name="sis9772", email="sis9772@naver.com" }
]
readme = "README.md"
requires-python = ">=3.7"

[project.scripts]
todo = "todo:main" 