[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-todo-kor"
version = "0.2.4"
description = "한글 CLI Todo List 프로그램"
authors = [
    { name="sis9772", email="sis9772@naver.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "platformdirs",
    "wcwidth"
]

[project.scripts]
todo = "cli_todo_kor.todo:main" 